k8s/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: o11y
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
